// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package intrinsic_proto.config;

// Reference to a product part within the current application.
message ProductPartReference {
  string product_part_name = 1;
}
